# projects_AI

TP01/: data_arbres.py  tp01.ipynb
TP01_EN_C/: CMakeLists.txt  README.md
TP01_EN_C/dataset/: accuracies.csv
TP01_EN_C/src/: DataLoader.cpp  DataLoader.hpp  Noeud.cpp  Noeud.hpp  display.py  main.cpp
TP02/: README.md  interfacelib.py  jeulib.py  joueurlib.py  questions.ipynb
TP03/: graphelib.py  graphes.ipynb
decision_tree_V.1/: data_arbres.py  tp01.ipynb
